dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__ack_completion__completion_from_idle_state_is_ignored.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main]  WARN ack completion observed while context is not in a flushed state self.ack_state=Idle
